test/for/struct_in_body.lox
// error: expect variable name
for () struct Foo {}